Init Vue.js 2 Single Page Application and replace local web page by it

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
                 <include>**/*.css</include>
                 <include>**/*.png</include>
                 <include>**/*.html</include>
+                <include>**/*.js</include>
             </includes>             
         </resource>
     </resources>
